pkg/model/testdata/ips-db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: backstage-psql-cr1 # placeholder for 'backstage-psql-<cr-name>'
spec:
  selector:
    matchLabels:
      rhdh.redhat.com/app: backstage-psql-cr1 # placeholder for 'backstage-psql-<cr-name>'
  serviceName: backstage-psql-cr1-hl # placeholder for 'backstage-psql-<cr-name>-hl'
  template:
    metadata:
      labels:
        rhdh.redhat.com/app: backstage-psql-cr1 # placeholder for 'backstage-psql-<cr-name>'
      name: backstage-db-cr1 # placeholder for 'backstage-psql-<cr-name>'
    spec:
      imagePullSecrets:
        - name: ips-db1
        - name: ips-db2
      automountServiceAccountToken: false
      containers:
        - image: quay.io/fedora/postgresql-18:latest
          name: postgres
