pkg/model/testdata/ips-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: backstage
spec:
  replicas: 1
  selector:
    matchLabels:
      backstage.io/app:  # placeholder for 'backstage-<cr-name>'
  template:
    metadata:
      labels:
        backstage.io/app:  # placeholder for 'backstage-<cr-name>'
    spec:
      imagePullSecrets:
        - name: ips1
        - name: ips2
      containers:
        - name: backstage-backend  # placeholder for 'backstage-backend'
          image: ghcr.io/backstage/backstage
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 7007
