pkg/model/testdata/multi-service-err.yaml
apiVersion: v1
kind: Service
spec:
  ports:
    - port: 8080
---
apiVersion: v1
kind: Service
spec:
  ports:
    - port: 8080
