pkg/model/testdata/raw-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: custom-deny
spec:
  podSelector:
    matchLabels:
      rhdh.redhat.com/app: ""
  policyTypes:
    - Ingress
    - Egress
