pkg/model/testdata/sidecar-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name:  <to_be_replaced> # placeholder for 'backstage-<cr-name>'
spec:
  replicas: 1
  selector:
    matchLabels:
      rhdh.redhat.com/app:  # placeholder for 'backstage-<cr-name>'
  template:
    metadata:
      labels:
        rhdh.redhat.com/app:  # placeholder for 'backstage-<cr-name>'
    spec:
      initContainers:
         - image: 'quay.io/rhdh/rhdh-hub-rhel9:next'
           name: install-dynamic-plugins
      containers:
        - name: backstage-backend    # placeholder for 'backstage-backend'
          image: quay.io/rhdh/rhdh-hub-rhel9:next
        - name: sidecar
          image: busybox
