pkg/model/testdata/working-dir-mount.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ""
spec:
#  selector:
#    matchLabels:
#      backstage.io/app:  #
  template:
#    metadata:
#      labels:
#        backstage.io/app:  #
    spec:
      containers:
        - name: backstage-backend
          image: ghcr.io/backstage/backstage
          workingDir: "/my/home"
